API doc update for project response
